<resources>
    <string name="app_name">My Application</string>
    <string name="delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="save">Save</string>
    <string name="first_name_required">First name is required!</string>
    <string name="last_name_required">Last name is required!</string>
    <string name="phone_number_required">Phone number is required!</string>
    <string name="edit">Edit</string>
    <string name="new_contact">New Contact</string>
</resources>